smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-requires-newline.smithy
// Parse error at line 4, column 24 near `use`: Expected a new line before this token
$version: "0.4.0"

use smithy.example#Foo use smithy.example#Baz
